--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -4,8 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="/css/styles.css" />
     </head>
     <body>
-        Hello Wornd with ejs
+        <h1>Hello World CN</h1>
+        <div>
+            <img class="developer" src="/images/cameraunsplash.jpg" alt="" />
+        </div>
     </body>
 </html>
