--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -48,7 +48,8 @@
                     <td><%= user.name %></td>
                     <td><%= user.city %></td>
                     <td>
-                        <button>Edit</button>
+                        <!-- sẽ chuyển hướng sang update của web.js -->
+                        <a href="/update/<%= user.id %>">Edit</a>
                         <button>Delete</button>
                     </td>
                 </tr>
