--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -50,7 +50,13 @@
                     <td>
                         <!-- sẽ chuyển hướng sang update của web.js -->
                         <a href="/update/<%= user.id %>">Edit</a>
-                        <button>Delete</button>
+
+                        <form
+                            action="/delete-user/<%= user.id %>"
+                            method="POST"
+                        >
+                            <button>Delete</button>
+                        </form>
                     </td>
                 </tr>
                 <% }); %>
